--- a/Web/Valheim/HTML/index.html
+++ b/Web/Valheim/HTML/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta charset="utf-8" />
-  <meta property="og:image" content="http://ngc-valheim.xyz/IMG/Logo2.jpg">
+  <meta property="og:image" content="http://ngc-valheim.xyz/Web/Valheim/IMG/Logo2.jpg">
   <meta property="og:title" content="머저리 게임크루 Valheim 웹서버">
   <meta property="og:description" content="NGC용 Valheim 공식 웹서버">
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
@@ -11,56 +11,56 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;700&family=Pacifico&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../CSS/index.css">
-  <link rel="apple-touch-icon" sizes="57x57" href="../IMG/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="../IMG/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="../IMG/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="../IMG/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="../IMG/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="../IMG/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="../IMG/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="../IMG/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="../IMG/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="../IMG/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../IMG/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="../IMG/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../IMG/favicon-16x16.png">
-  <link rel="manifest" href="../IMG/manifest.json">
+  <link rel="stylesheet" type="text/css" href="../Valheim/CSS/index.css">
+  <link rel="apple-touch-icon" sizes="57x57" href="../Valheim/IMG/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="../Valheim/IMG/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="../Valheim/IMG/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../Valheim/IMG/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="../Valheim/IMG/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="../Valheim/IMG/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="../Valheim/IMG/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../Valheim/IMG/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../Valheim/IMG/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../Valheim/IMG/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../Valheim/IMG/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="../Valheim/IMG/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../Valheim/IMG/favicon-16x16.png">
+  <link rel="manifest" href="../Valheim/IMG/manifest.json">
   <meta name="msapplication-TileColor" content="#111217">
-  <meta name="msapplication-TileImage" content="../IMG/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="../Valheim/IMG/ms-icon-144x144.png">
   <meta name="theme-color" content="#111217">
   <title>머저리 게임크루 : 발헤임 온라인 서버</title>
 </head>
 <body bgcolor="#111217">
   <div class="mainDiv">
-    <img src="../IMG/Logo.png" alt="" class="logo_img">
+    <img src="../Valheim/IMG/Logo.png" alt="" class="logo_img">
 
     <div class="subDib">
       <span class="titleHeader">🕹️ 머저리 게임 크루 Valheim 서버</span>
-
+      <img src="../Valheim/IMG/screenshot_final.png" alt="" class="" width="100%">
       <div class="bossDiv">
         <table class="tg">
           <tr>
             <th class="tg-0lax">
-              <img src="../IMG/boss_1_C.png" alt="">
+              <img src="../Valheim/IMG/boss_1_C.png" alt="">
               <a href="https://namu.wiki/w/Valheim/%EC%83%9D%EB%AC%BC#s-3.3.1">에이크쉬르</a>
               <span class="clearDiv">2022.06.19</span>
             </th>
-              <th class="tg-0lax"><img src="../IMG/boss_2_C.png" alt="">
+              <th class="tg-0lax"><img src="../Valheim/IMG/boss_2_C.png" alt="">
               <a href="https://namu.wiki/w/Valheim/%EC%83%9D%EB%AC%BC#s-3.3.2">엘더</a>
               <span class="clearDiv">2022.07.03</span>
             </th>
-              <th class="tg-0lax"><img src="../IMG/boss_3_C.png" alt="">
+              <th class="tg-0lax"><img src="../Valheim/IMG/boss_3_C.png" alt="">
               <a href="https://namu.wiki/w/Valheim/%EC%83%9D%EB%AC%BC#s-3.3.3">본매스</a>
               <span class="clearDiv">2022.07.17</span>
             </th>
-              <th class="tg-0lax"><img src="../IMG/boss_4.png" alt="">
-              <a class="not_clear" href="https://namu.wiki/w/Valheim/%EC%83%9D%EB%AC%BC#s-3.3.4">모더</a>
-              <span class="NotClearDiv">도전하지 않음</span>
+              <th class="tg-0lax"><img src="../Valheim/IMG/boss_4_C.png" alt="">
+              <a href="https://namu.wiki/w/Valheim/%EC%83%9D%EB%AC%BC#s-3.3.4">모더</a>
+              <span class="clearDiv">2022.07.28</span>
             </th>
-              <th class="tg-0lax"><img src="../IMG/boss_5.png" alt="">
-              <a class="not_clear" href="https://namu.wiki/w/Valheim/%EC%83%9D%EB%AC%BC#s-3.3.5">야글루스</a>
-              <span class="NotClearDiv">도전하지 않음</span>
+              <th class="tg-0lax"><img src="../Valheim/IMG/boss_5_C.png" alt="">
+              <a href="https://namu.wiki/w/Valheim/%EC%83%9D%EB%AC%BC#s-3.3.5">야글루스</a>
+              <span class="clearDiv">2022.07.30</span>
             </th>
           </tr>
         </table>
@@ -69,7 +69,7 @@
       <table style="margin-left:10px">
         <tr>
           <td width="30%" class="thumbnail">
-            <img src="../IMG/Side.png" width="100%" alt="" style="display:block;margin-top:5px;">
+            <img src="../Valheim/IMG/Side.png" width="100%" alt="" style="display:block;margin-top:5px;">
           </td>
           <td width="65%">
             <ul>
@@ -87,7 +87,7 @@
 
     <div class="subDib">
       <span class="titleHeader">실시간 서버 컴퓨팅 현황</span>
-      <iframe src="http://15.165.236.77:3000/d-solo/NGC/ngc_panel?orgId=1&refresh=1s&panelId=2" width="100%" class="grafana" frameborder="0"></iframe>
+      <iframe src="http://ngc-valheim.xyz:3000/d-solo/NGC/ngc_panel?orgId=1&refresh=1s&panelId=2" width="100%" class="grafana" frameborder="0"></iframe>
       <ul>
         <li>Promethus와 Garafana docker 서비스를 통한 컴퓨팅 리소스 현황</li>
       </ul>
@@ -97,47 +97,47 @@
       <span class="titleHeader">NGC서버 Valheim 플러그인</span>
       <div class="cardPlace">
         <div class="cardButton">
-          <img src="../IMG/plugin_01.png" alt="" class="cardImages">
+          <img src="../Valheim/IMG/plugin_01.png" alt="" class="cardImages">
           <span class="cardTitle draggable">Grave keeper</span>
         </div>
 
         <div class="cardButton">
-          <img src="../IMG/plugin_02.png" alt="" class="cardImages">
+          <img src="../Valheim/IMG/plugin_02.png" alt="" class="cardImages">
           <span class="cardTitle draggable">Map Teleporter</span>
         </div>
 
         <div class="cardButton">
-          <img src="../IMG/plugin_03.png" alt="" class="cardImages">
+          <img src="../Valheim/IMG/plugin_03.png" alt="" class="cardImages">
           <span class="cardTitle draggable">Epic Loot</span>
         </div>
 
         <div class="cardButton">
-          <img src="../IMG/plugin_04.png" alt="" class="cardImages">
+          <img src="../Valheim/IMG/plugin_04.png" alt="" class="cardImages">
           <span class="cardTitle draggable">BepInEx</span>
         </div>
 
         <div class="cardButton">
-          <img src="../IMG/plugin_05.png" alt="" class="cardImages">
+          <img src="../Valheim/IMG/plugin_05.png" alt="" class="cardImages">
           <span class="cardTitle draggable">Extented Item Data Framework</span>
         </div>
 
         <div class="cardButton">
-          <img src="../IMG/plugin_06.png" alt="" class="cardImages">
+          <img src="../Valheim/IMG/plugin_06.png" alt="" class="cardImages">
           <span class="cardTitle draggable">More Slots</span>
         </div>
 
         <div class="cardButton">
-          <img src="../IMG/plugin_07.png" alt="" class="cardImages">
+          <img src="../Valheim/IMG/plugin_07.png" alt="" class="cardImages">
           <span class="cardTitle draggable">Trash Items</span>
         </div>
 
         <div class="cardButton">
-          <img src="../IMG/plugin_08.png" alt="" class="cardImages">
+          <img src="../Valheim/IMG/plugin_08.png" alt="" class="cardImages">
           <span class="cardTitle draggable">Unresticted Portals</span>
         </div>
 
         <div class="cardButton">
-          <img src="../IMG/plugin_09.png" alt="" class="cardImages">
+          <img src="../Valheim/IMG/plugin_09.png" alt="" class="cardImages">
           <span class="cardTitle draggable">Valheim Plus</span>
         </div>
       </div>
@@ -188,11 +188,11 @@
           <li>r2modman을 켜고, 왼쪽의 setting을 누르고, Browse profile folder를 누릅니다.</li>
         </ul>
 
-        <img src="../IMG/Install.png" class="Install" alt="" id="Install">
+        <img src="../Valheim/IMG/Install.png" class="Install" alt="" id="Install">
         <script>
           let Install = document.getElementById('Install')
           Install.addEventListener('click',() => {
-            location.href= '../IMG/Install.png'
+            location.href= '../Valheim/IMG/Install.png'
           })
         </script>
 
@@ -208,51 +208,83 @@
       <span class="titleHeader">모험 일지</span>
       <div class="cardPlace2">
         <div class="screenShot">
-          <img src="../IMG/screenshot_0.png" alt="">
+          <img src="../Valheim/IMG/screenshot_0.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_1.png" alt="">
+          <img src="../Valheim/IMG/screenshot_1.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_2.png" alt="">
+          <img src="../Valheim/IMG/screenshot_2.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_3.png" alt="">
+          <img src="../Valheim/IMG/screenshot_3.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_4.png" alt="">
+          <img src="../Valheim/IMG/screenshot_4.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_5.png" alt="">
+          <img src="../Valheim/IMG/screenshot_5.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_6.png" alt="">
+          <img src="../Valheim/IMG/screenshot_6.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_7.png" alt="">
+          <img src="../Valheim/IMG/screenshot_7.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_8.png" alt="">
+          <img src="../Valheim/IMG/screenshot_8.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_9.png" alt="">
+          <img src="../Valheim/IMG/screenshot_9.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_10.png" alt="">
+          <img src="../Valheim/IMG/screenshot_10.png" alt="">
         </div>
 
         <div class="screenShot">
-          <img src="../IMG/screenshot_11.png" alt="">
+          <img src="../Valheim/IMG/screenshot_11.png" alt="">
+        </div>
+
+        <div class="screenShot">
+          <img src="../Valheim/IMG/screenshot_12.png" alt="">
+        </div>
+
+        <div class="screenShot">
+          <img src="../Valheim/IMG/screenshot_13.png" alt="">
+        </div>
+
+        <div class="screenShot">
+          <img src="../Valheim/IMG/screenshot_14.png" alt="">
+        </div>
+
+        <div class="screenShot">
+          <img src="../Valheim/IMG/screenshot_15.png" alt="">
+        </div>
+
+        <div class="screenShot">
+          <img src="../Valheim/IMG/screenshot_16.png" alt="">
+        </div>
+
+        <div class="screenShot">
+          <img src="../Valheim/IMG/screenshot_17.png" alt="">
+        </div>
+
+        <div class="screenShot">
+          <img src="../Valheim/IMG/screenshot_18.png" alt="">
+        </div>
+
+        <div class="screenShot">
+          <img src="../Valheim/IMG/screenshot_19.png" alt="">
         </div>
 
       </div>
@@ -262,7 +294,7 @@
 
         for(let i = 0; i < screenShots.length; i++) {
           screenShots[i].addEventListener('click',() => {
-            location.href= `../IMG/screenshot_${i}.png`
+            location.href= `../Valheim/IMG/screenshot_${i}.png`
           })
         }
       </script>
