update NGC icon

--- a/Web/SatisFactory/HTML/index.html
+++ b/Web/SatisFactory/HTML/index.html
@@ -44,6 +44,14 @@
       </div>
     </div>
     <hr>
+
+    <div class="subDiv">
+      <div class="subDivTitle">
+        <span>플레이 정보</span>
+      </div>
+    </div>
+
+
   </div>
 
   <div class="footer">
