Satis Factory page update

--- a/Web/SatisFactory/HTML/index.html
+++ b/Web/SatisFactory/HTML/index.html
@@ -44,13 +44,115 @@
       </div>
     </div>
     <hr>
-
+    <!--##############################################################################################################################
+    #
+    #  플레이 정보
+    #  플레이 시간과 같은 정보를 적는다
+    #
+    ###############################################################################################################################-->
     <div class="subDiv">
       <div class="subDivTitle">
         <span>플레이 정보</span>
       </div>
     </div>
 
+    <hr>
+
+    <!--##############################################################################################################################
+    #
+    #  워크 플로우
+    #  Kanban 스타일의 워크 플로우 작성
+    #
+    ###############################################################################################################################-->
+    <div class="subDiv">
+      <div class="subDivTitle">
+        <span>워크 플로우</span>
+      </div>
+    </div>
+
+    <hr>
+
+    <!--##############################################################################################################################
+    #
+    #  마일스톤
+    #  해금한 마일스톤과 해금하지 못한 마일스톤을 적는다
+    #
+    ###############################################################################################################################-->
+    <div class="subDiv">
+      <div class="subDivTitle">
+        <span>마일스톤</span>
+      </div>
+    </div>
+
+    <hr>
+
+    <!--##############################################################################################################################
+    #
+    #  대체 제작법
+    #  하드 드라이브 분석을 통해 얻은 대체 제작법들을 적는다
+    #
+    ###############################################################################################################################-->
+    <div class="subDiv">
+      <div class="subDivTitle">
+        <span>대체 제작법</span>
+      </div>
+    </div>
+
+    <hr>
+
+    <!--##############################################################################################################################
+    #
+    #  전력 생산량
+    #  월드 내 전력 생산 및 소비량 통계를 보여준다
+    #
+    ###############################################################################################################################-->
+    <div class="subDiv">
+      <div class="subDivTitle">
+        <span>전력 생산량</span>
+      </div>
+    </div>
+
+    <hr>
+
+    <!--##############################################################################################################################
+    #
+    #  지도
+    #  월드 지도를 보여준다
+    #
+    ###############################################################################################################################-->
+    <div class="subDiv">
+      <div class="subDivTitle">
+        <span>지도</span>
+      </div>
+    </div>
+
+    <hr>
+
+    <!--##############################################################################################################################
+    #
+    #  연구노트
+    #  새티스 팩토리 연구노트를 작 (아이패드로 작성한 스크린 샷)
+    #
+    ###############################################################################################################################-->
+    <div class="subDiv">
+      <div class="subDivTitle">
+        <span>연구노트</span>
+      </div>
+    </div>
+
+    <hr>
+
+    <!--##############################################################################################################################
+    #
+    #  스크린샷
+    #  스크린샷을 모아둔 장소이다. (4의 배수 추천)
+    #
+    ###############################################################################################################################-->
+    <div class="subDiv">
+      <div class="subDivTitle">
+        <span>스크린 샷</span>
+      </div>
+    </div>
 
   </div>
 
