--- a/Web/Main/HTML/index.html
+++ b/Web/Main/HTML/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta charset="utf-8" />
-        <meta property="og:image" content="http://nerdgamecrew.link/Web/Main/IMG/Logo2.jpg">
+        <meta property="og:image" content="http://nerdgamecrew.link/Main/IMG/Thumbnail.jpg">
         <meta property="og:title" content="머저리 게임 크루 웹서버">
         <meta property="og:description" content="머저리 게임 크루">
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
